; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_exc_resource_threads.c_catch_mach_exception_raise.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_exc_resource_threads.c_catch_mach_exception_raise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXC_CORPSE_NOTIFY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"exception type\00", align 1
@SIGKILL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"kill\00", align 1
@sync_sema = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @catch_mach_exception_raise(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @pid_for_task(i32 %14, i32* %13)
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* @EXC_CORPSE_NOTIFY, align 4
  %18 = call i32 @T_ASSERT_EQ(i32 %16, i32 %17, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* %13, align 4
  %20 = load i32, i32* @SIGKILL, align 4
  %21 = call i32 @kill(i32 %19, i32 %20)
  %22 = call i32 @T_ASSERT_POSIX_ZERO(i32 %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i32, i32* @sync_sema, align 4
  %24 = call i32 @dispatch_semaphore_signal(i32 %23)
  %25 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %25
}

declare dso_local i32 @pid_for_task(i32, i32*) #1

declare dso_local i32 @T_ASSERT_EQ(i32, i32, i8*) #1

declare dso_local i32 @T_ASSERT_POSIX_ZERO(i32, i8*) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @dispatch_semaphore_signal(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
